methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:3: error: value Red is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                       ^PatternPicture:3: error: value Blue is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                                                   ^PatternPicture:3: error: value Blue is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                                                                                                  ^PatternPicture:3: error: value Green is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                                                                                                                               ^PatternPicture:3: error: value Green is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                                                                                                                                                                      ^PatternPicture:3: error: value Yellow is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                                                                                                                                                                                                    ^PatternPicture:3: error: value Yellow is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                                                                                                                                                                                                                                                     ^PatternPicture:3: error: value Red is not a member of object java.awt.Color
def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}
                                                                                                                                                                                                                                                                                                    ^