methods.picture.PatternPicture.scala.code
def marquer (c:Color) = {setCouleurBrosse(c);baisseBrosse();leveBrosse()}

def pattern () {avance();marquer(Color.Red);avance();marquer(Color.Blue);avance();gauche();avance();marquer(Color.Blue);avance();marquer(Color.Green);avance();gauche();marquer(Color.Green);avance();marquer(Color.Yellow);avance();gauche();avance();marquer(Color.Yellow);avance();marquer(Color.Red);avance();gauche()}

override def run() {for (j <- 1 to 2 ){for (i <- 1 to 2) {pattern();avance(4)};gauche();avance(4);gauche()}
  
}

